--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ learning_site/learning_site/__pycache__/wsgi.cpython-36.pyc
 learning_site/learning_site/__pycache__/urls.cpython-36.pyc
 learning_site/learning_site/__pycache__/settings.cpython-36.pyc
 learning_site/learning_site/__pycache__/__init__.cpython-36.pyc
+learning_site/courses/__pycache__/__init__.cpython-36.pyc
+learning_site/courses/__pycache__/admin.cpython-36.pyc
+learning_site/courses/__pycache__/models.cpython-36.pyc
+learning_site/courses/migrations/__pycache__/__init__.cpython-36.pyc
+learning_site/learning_site/__pycache__/views.cpython-36.pyc
