--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ learning_site/courses/__pycache__/models.cpython-36.pyc
 learning_site/courses/migrations/__pycache__/__init__.cpython-36.pyc
 learning_site/learning_site/__pycache__/views.cpython-36.pyc
 learning_site/courses/migrations/__pycache__/0001_initial.cpython-36.pyc
+learning_site/courses/__pycache__/urls.cpython-36.pyc
+learning_site/courses/__pycache__/views.cpython-36.pyc
