--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ learning_site/learning_site/__pycache__/views.cpython-36.pyc
 learning_site/courses/migrations/__pycache__/0001_initial.cpython-36.pyc
 learning_site/courses/__pycache__/urls.cpython-36.pyc
 learning_site/courses/__pycache__/views.cpython-36.pyc
+learning_site/courses/migrations/__pycache__/0002_step.cpython-36.pyc
