--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ codechall_project/karaoke/songs/migrations/__pycache__/0001_initial.cpython-36.p
 .ipynb_checkpoints/Django_templates-checkpoint.ipynb
 __pycache__
 .vscode/
+learning_site/django_env/
